--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<h1 class="title">Eyes on the screen</h1>
+<h1 class="title">KeyBlaze</h1>
+<h2 class="title">Eyes on the screen</h2>
 <div class="keyboard">
   <ul class="row row-0">
     <li class="pinky" id="esc">ESC</li>
